<resources>

    <string name="app_name">Mechanic</string>
    <string name="action_settings">Settings</string>
    <string name="carmonic">Carmonic</string>
    <string name="Register">Register</string>
    <string name="SignIn">Sign In</string>
    <string name="Next">Next</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_sign_up">sign_up</string>
    <string name="title_activity_sign_in">sign_in</string>
    <string name="title_activity_sign_up2">sign_up2</string>
    <string name="billing_info_str"><u>Billing Information</u></string>
    <string name="billing_rider_msg">We hope we are able to help</string>
    <string name="billing_total_amount_msg">&#160;&#160;<i>Your <u>total</u> of #6500 has been charged to \n &#160;your card <u>ending with 7789</u></i></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_with_location_confirmed">Map</string>
    <string name="title_activity_sign_in_activtiy">SignInActivtiy</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_test">test</string>


    <string name="dialog_text">A customer needs your help xxxxKm \n away from your location </string>
    <string name="see_details">See Details</string>
    <string name="decline_request">Decline Request</string>
    <string name="title_activity_customer_detail">CustomerDetail</string>
    <string name="cust_description">XXXX needs help with his car.\nHe is YYYY kilometres away from you</string>
    <string name="location_descr">XXX needs help with is car.Meet him/her at YYY </string>
    <string name="car_fault">My car is a blue Audi R8 with plate number P9085Y9. My engine is overheating.</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_activity_customer_location">CustomerLocation</string>

    <!--Fetch Address-->
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string-array name="order_title">
        <item>In Transit</item>
        <item>Arrived</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Rejected</item>
        <item>Accepted</item>
    </string-array>
    <string name="One_moment_please">One moment please...</string>


    <string name="hello_world">Hello world!</string>
    <string name="service_demo">Service Demo</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="title_activity_testtest">testtest</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_thank_you">ThankYouActivity</string>

</resources>
