<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:id="@+id/root"
    >


        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_layout_bg"
            >
            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorYellow"
                android:textStyle="bold"
                android:textSize="10dp"
                />




            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_below="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal|center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Topic"
                    android:id="@+id/txtTopic"
                    android:textColor="@color/colorPrimaryTextColor"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/circles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/titleLayout"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_text"
                    android:id="@+id/txtNotification"
                    android:textColor="@color/colorPrimaryTextColor"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginRight="21dp"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="normal" />

            </LinearLayout>


            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/circles"

                android:background="#B9B9B9"/>


            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_below="@+id/line1"
                android:orientation="horizontal" >

                <TextView

                    android:id="@+id/txtSeeDetail"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/see_details"
                    android:textColor="@color/dialog_text"
                    android:textSize="12sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />


                <View
                    android:id="@+id/line2"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="@color/dialog_text"/>


                <TextView

                    android:id="@+id/txtDecline"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/decline_request"
                    android:layout_margin="10dp"
                    android:textColor="@color/decline_button"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>



        </RelativeLayout>





</LinearLayout>