<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




<LinearLayout
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="top"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/grad_hom"
    >


    <TextView
        android:id="@+id/cancel_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        android:text="X"
        android:textColor="@color/colorYellow"
        android:textStyle="normal"
        android:textSize="20dp"
       />


    <LinearLayout
        android:id="@+id/infoPanel"
        android:layout_below="@+id/cancel_action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:visibility="visible"
        android:layout_gravity="top"
        android:gravity="top|center"
       >


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:elevation="4dp"
            android:src="@drawable/user"
            app:civ_border_color="@color/nav_pic_border_dark"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/txtCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_picture"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="FIKAYO"
            android:textColor="@color/colorYellow"
            android:textSize="25dp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCustomerName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/star_off" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:text="4.67"
                android:textColor="@color/colorYellow"
                android:textSize="25dp"

                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="26dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@fonts/GlacialIndifferenceRegular"
            android:gravity="center"
            android:text="@string/cust_description"
            android:textColor="#B9B9B9"
            android:textSize="20dp" />


        <!--<TextView-->
            <!--android:layout_below="@+id/txtDescription"-->
            <!--android:id="@+id/txtNote"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginLeft="40dp"-->
            <!--android:layout_marginRight="40dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:fontFamily="@fonts/GlacialIndifferenceRegular"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/car_fault"-->
            <!--android:textColor="@color/dialog_text"-->
            <!--android:textSize="17sp"-->
            <!--android:textStyle="normal" />-->


        <TextView
            android:id="@+id/txtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescription"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@fonts/GlacialIndifferenceRegular"
            android:gravity="center"
            android:text="Respond to his request in:"
            android:textColor="@color/colorYellow"
            android:textSize="18dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtText"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@fonts/GlacialIndifferenceRegular"
            android:gravity="center"
            android:text="4.59minutes "
            android:textColor="@color/colorYellow"
            android:textSize="25dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/txtTimer"
            android:layout_gravity="bottom"
            android:layout_marginBottom="40dp"
            android:gravity = "bottom"
            android:background="@android:color/transparent"
            android:padding="5dp">

            <Button
                android:id="@+id/btnDecline"
                android:layout_width="97dp"
                android:layout_height="33dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:background="@drawable/decline_button"
                android:gravity="center"
                android:text="@string/decline"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnAccept"
                android:layout_width="97dp"
                android:layout_height="37dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/accept_button"
                android:text="@string/accept"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


        </RelativeLayout>


    </LinearLayout>



</LinearLayout>


    </LinearLayout>
</LinearLayout>